# zapier-automation

./: .gitignore  Cargo.toml  README.md  deploy.sh  dfx-deploy.sh  dfx.json  dfx.json.bak  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
HACK_BECAUSE_OF_ALLOW_JS/zapier-automation-frontend/: vite.config.js
HACK_BECAUSE_OF_ALLOW_JS/zapier-automation-frontend/src/: App.js  main.js
HACK_BECAUSE_OF_ALLOW_JS/zapier-automation-frontend/src/components/: CreateWorkflowForm.js  ErrorBoundary.js  TemplateSection.js  ThemeSwitcher.js  WorkflowDashboard.js  WorkflowDetails.js  WorkflowLogs.js  templates.js
HACK_BECAUSE_OF_ALLOW_JS/zapier-automation-frontend/src/components/Header/: Header.js
HACK_BECAUSE_OF_ALLOW_JS/zapier-automation-frontend/src/components/IntegrationCard/: IntegrationCard.js  IntegrationPicker.js
architecture_diagrams/: Oauth.md  deepseek_mermaid_20250523_c577c1.pngZone.Identifier
assets/: google-calendar.svgZone.Identifier  index-1412d6cd.css  index-a2696883.js
canisters/internet_identity/: internet_identity_production.wasm
src/zapier-automation-backend/: Cargo.toml  zapier-automation-backend.did
src/zapier-automation-backend/src/: lib.rs
src/zapier-automation-backend/src/adapters/: mod.rs  web2.rs
src/zapier-automation-backend/src/core/: http_req_mod.rs  lib.rs
src/zapier-automation-frontend/: backend.ts  index.html  package.json  vite.config.js
src/zapier-automation-frontend/public/assets/: plus.svgZone.Identifier
src/zapier-automation-frontend/src/: App.css  App.jsx  index.css  main.jsx
src/zapier-automation-frontend/src/components/: CreateWorkflowForm.jsx  ErrorBoundary.jsx  OAuth2Callback.jsx  TemplateSection.jsx  ThemeSwitcher.jsx  WorkflowDashboard.jsx  WorkflowDetails.jsx  WorkflowLogs.jsx  templates.ts
src/zapier-automation-frontend/src/contexts/: ThemeContext.jsx
src/zapier-automation-frontend/src/utils/: Integration.jsx
src/zapier_automation_backend/: Cargo.toml  zapier_automation_backend.did
src/zapier_automation_backend/src/: api.rs  lib.rs
src/zapier_automation_backend/src/adapters/: mod.rs  web2.rs  webhook.rs
src/zapier_automation_backend/src/core/: lib.rs  mod.rs
src/zapier_automation_frontend/: index.html  package.json
src/zapier_automation_frontend/public/assets/: chevron.svgZone.Identifier  metamask.svgZone.Identifier  search.svgZone.Identifier
src/zapier_automation_frontend/src/: App.css  App.jsx  index.css  main.jsx
src/zapier_automation_frontend/src/components/: ConnectSheetsButton.jsx  OAuth2Callback.jsx
(+88 files in other folders)
