# src/zapier-automation-backend/Cargo.toml

[package]
name = "zapier-automation-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/core/lib.rs"

[dependencies]
candid = "0.10.14"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
# reqwest = { version = "0.11", features = ["blocking", "json"] 

[build-dependencies]
candid-extractor = "0.1.6"