[package]
name = "zapier_automation_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
urlencoding = "2.1.2"
rand = "0.8"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde"] }
ic-cdk = "0.17.2"
ic-cdk-macros = "0.17.2"
ic-cdk-timers = "0.6.0"