[package]
name = "zapier_automation_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10.17"           # matches IC-CDK 0.15.1
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "1.0.69"
async-trait = "0.1.63"
urlencoding = "2.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = { version = "0.2.16", features = ["js"] }
chrono = { version = "0.4.41", features = ["serde"] }
ic-cdk = "0.17.2"
ic-cdk-macros = "0.17.2"
ic-cdk-timers = "0.6.0"
num-traits = "0.2.19"



